[package]
name = "basic_seed_chainer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
bio = "*"
fxhash = "*"
libwfa = "0.1"
rayon = "*"
clap = "2.3"


[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.bench]
debug = true
